--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/zacharyboelter/budgtr#readme",
   "dependencies": {
     "ejc": "^1.0.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
 }
